--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <meta http-equiv="Expires" content="0" />
 <style>
   :root{
-    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f;
+    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb;
+    --accent:#222; --soft:#cfd3d7;
   }
   *{ box-sizing:border-box }
-  html,body{ height:auto; min-height:100%; }
+  html,body{ height:100% }
   body{
     margin:0; background:var(--bg); color:var(--ink);
     font:14px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     -webkit-print-color-adjust:exact; print-color-adjust:exact;
   }
-
+  /* Paper */
   .sheet{
-    width:900px; max-width:95vw; margin:22px auto;
-    background:var(--paper); border:1px solid var(--line); border-radius:12px;
-    box-shadow:0 10px 30px rgba(0,0,0,.05);
+    width:900px; max-width:95vw; margin:22px auto; background:var(--paper);
+    border:1px solid var(--line); border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.05);
     padding:28px 32px 26px;
   }
 
@@ -33,10 +33,11 @@
   .logo img{ max-width:100%; max-height:100%; object-fit:contain }
   .t1{ font-size:20px; font-weight:800; letter-spacing:.02em }
   .t2{ font-size:12px; color:var(--muted); margin-top:2px }
-  .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:var(--accent) }
+  .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:#2b2f35 }
 
-  .divider{ height:3px; background:linear-gradient(90deg, var(--accent) 0 15%, #c7c9cc 15% 100%); border-radius:3px; margin:12px 0 4px }
-  .site{ text-align:right; color:#4b5563; font-size:12px; margin-bottom:12px }
+  /* “Bar” that prints correctly */
+  .rule{ height:6px; background:var(--soft); border-radius:4px; position:relative; margin:10px 0 6px }
+  .rule::before{ content:""; position:absolute; inset:0 auto 0 0; width:120px; background:var(--accent); border-radius:4px }
 
   /* Top meta */
   .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:8px }
@@ -46,9 +47,10 @@
   .kv{ display:grid; grid-template-columns:140px 1fr; gap:6px 12px; font-size:13px }
   .label{ color:var(--muted) }
 
+  /* right meta is borderless */
   .meta-plain{ border:none; background:transparent; padding:0; text-align:right; }
   .meta-plain .kv{ grid-template-columns:1fr 140px; margin-top:4px }
-  .desc{ margin-top:8px; font-size:13px; color:#374151; text-align:right }
+  .desc{ margin-top:8px; font-size:13px; color:#374151 }
 
   /* Items */
   h3.section{ margin:18px 0 10px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
@@ -57,7 +59,7 @@
     text-transform:uppercase; letter-spacing:.05em; font-size:11px; color:#4b5563;
     border-bottom:2px solid var(--accent); padding:8px 10px; background:#f3f4f6; text-align:center;
   }
-  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center; vertical-align:middle }
+  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center }
   tbody td.desc-cell{ text-align:left }
   tbody tr:nth-child(2n){ background:#fafafa }
   td.num{ white-space:nowrap }
@@ -79,24 +81,23 @@
   .sigline{ width:240px; border-bottom:1px solid #d1d5db; height:50px }
   .sigmeta{ text-align:right; font-size:12px; color:#4b5563 }
 
-  /* Footer */
-  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; border-top:1px solid #e5e7eb; color:#374151 }
+  /* Footer contacts */
+  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; color:#374151 }
   .footer div{ display:flex; align-items:center; gap:10px; }
-  .icon{ width:24px; height:24px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
-  .icon svg{ width:14px; height:14px; stroke:#6b7280; fill:none; stroke-width:2; }
-  .footer small{ font-size:12px }
+  .icon{ width:28px; height:28px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
+  .icon svg{ width:16px; height:16px; stroke:#6b7280; fill:none; stroke-width:2; }
+  .footer small{ font-size:12px } /* smaller so address doesn’t wrap */
+
+  /* Bottom rule */
+  .rule-bottom{ margin-top:12px }
 
   /* Print */
-  @page { size: A4; margin: 10mm; }
+  @page { size:A4; margin:10mm }
   thead{ display:table-header-group }
   tfoot{ display:table-footer-group }
   @media print{
     body{ background:#fff }
-    .sheet{ width: 190mm; margin:0 auto; box-shadow:none; border:none; padding:0 0 6mm 0; }
-    .divider{ background:#000 }
-    .footer small{ font-size:11px }
-    /* Avoid stray last blank page */
-    .sheet{ page-break-after:auto; }
+    .sheet{ box-shadow:none; border:none; width:190mm; padding:0 6mm 6mm; margin:0 auto; }
   }
 </style>
 </head>
@@ -107,13 +108,13 @@
         <div class="logo" id="from_logo_box"></div>
         <div>
           <div class="t1" id="brand_name">Company</div>
-          <div class="t2" id="brand_sub"></div>
+          <div class="t2" id="brand_web"></div>
         </div>
       </div>
       <div class="right"><div class="inv-title" id="inv_title">INVOICE</div></div>
     </header>
-    <div class="divider"></div>
-    <div class="site" id="brand_site"></div>
+
+    <div class="rule"></div>
 
     <section class="meta">
       <!-- CLIENT -->
@@ -137,7 +138,7 @@
           <div class="label">Invoice no :</div><div id="invoice_number"></div>
           <div class="label">Date :</div><div id="invoice_date"></div>
         </div>
-        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700; text-align:right">Invoice Description</h4>
+        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700">Invoice Description</h4>
         <div class="desc" id="invoice_description"></div>
       </div>
     </section>
@@ -146,10 +147,10 @@
     <table>
       <thead>
         <tr>
-          <th style="width:130px">Date of Work</th>
+          <th style="width:140px">Date of Work</th>
           <th>Description</th>
           <th style="width:120px">Price / Hourly Rate</th>
-          <th style="width:80px">Cost Qty</th>
+          <th style="width:90px">Cost Qty</th>
           <th style="width:140px">Cost Total</th>
         </tr>
       </thead>
@@ -159,11 +160,11 @@
     <section class="totals">
       <div class="pay">
         <h5>Payment Method :</h5>
-        <p><strong>Company ABN</strong> : <span id="company_abn"></span></p>
+        <p><strong>Company ABN</strong> : <span id="from_business_no"></span></p>
         <p><strong>Bank Name</strong> : <span id="bank_name"></span></p>
         <p><strong>Account Name</strong> : <span id="bank_acc_name"></span></p>
         <p><strong>Account Number</strong> : <span id="bank_acc_no"></span></p>
-        <p><strong>Account BSB</strong> : <span id="bank_bsb"></span></p>
+        <p><strong>Account BSB</strong> : <span id="bank_routing"></span></p>
       </div>
       <div class="sum">
         <div class="row"><div class="label">Total Hours :</div><div id="total_hours">0</div></div>
@@ -173,7 +174,7 @@
       </div>
     </section>
 
-    <div class="thanks">Thank you for your business!</div>
+    <div class="thanks" id="thanks">Thank you for your business!</div>
     <div class="terms" id="terms"></div>
 
     <div class="sigwrap" id="sign_block">
@@ -183,6 +184,8 @@
       </div>
     </div>
 
+    <div class="rule rule-bottom"></div>
+
     <footer class="footer">
       <div>
         <span class="icon">
@@ -191,7 +194,7 @@
       </div>
       <div>
         <span class="icon">
-          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/></svg>
+          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/><path d="M2 18h20"/></svg>
         </span> <small id="from_email_footer"></small>
       </div>
       <div>
@@ -223,20 +226,16 @@
     else { el.textContent = ''; el.style.display='none'; }
   }
 
-  // Header brand
-  const brand = get('from_name','');
-  setText('brand_name', brand || 'Invoice');
-  setText('brand_sub', get('from_web',''));
-  setText('brand_site', get('from_web',''));
+  // Header brand (no right website)
+  setText('brand_name', get('from_name','Invoice'));
+  setText('brand_web', get('from_web',''));
 
   // Logo
   const logo = get('from_logo','').trim();
-  if (logo) {
-    document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`;
-  }
+  if (logo) document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`;
 
-  // Title + invoice number
-  setText('inv_title', 'INVOICE');
+  // Title + invoice number (title is always INVOICE)
+  document.getElementById('inv_title').textContent = 'INVOICE';
   setText('invoice_number', get('invoice_number',''));
 
   // Date formatting
@@ -252,7 +251,7 @@
     setText('invoice_date', out);
   })();
 
-  // Client
+  // Client fields
   setText('client_name', get('client_name',''));
   setText('client_phone', get('client_phone',''));
   setText('client_email', get('client_email',''));
@@ -263,37 +262,32 @@
   // Description
   setText('invoice_description', get('invoice_description',''));
 
-  // Payment / bank
-  // company_abn = from_business_no (ABN)
-  setText('company_abn', get('from_business_no',''));
+  // Payment / bank (+ company ABN)
+  setText('from_business_no', get('from_business_no',''));
   setText('bank_name', get('bank_name',''));
   setText('bank_acc_name', get('bank_acc_name',''));
   setText('bank_acc_no', get('bank_acc_no',''));
-  const bsb = get('bank_bsb','') || get('bank_routing','');
-  setText('bank_bsb', bsb);
+  setText('bank_routing', get('bank_routing',''));
 
   // Footer contact from company
   setText('from_phone_footer', get('from_phone',''));
   setText('from_email_footer', get('from_email',''));
   setText('from_address_footer', get('from_address',''));
 
-  // Items parser — rows: (date?)::title::price::qty::total
+  // Items parser — format:  "date::title::price::qty::total" joined by "||"
   function parseItems(str){
     if(!str) return [];
     const rowSep = /(\|\||%7C%7C)/i;
     const colSep = /(::|%3A%3A)/i;
     return str.split(rowSep).filter(s => !rowSep.test(s) && s!=='')
       .map(row => {
-        const parts = row.split(colSep).filter(s => !colSep.test(s));
-        // support 4 or 5 fields
-        let date='', title='', price='', qty='', total='';
-        if(parts.length === 5){ [date,title,price,qty,total] = parts; }
-        else { [title,price,qty,total] = parts; }
+        const fields = row.split(colSep).filter(s => !colSep.test(s));
+        const [date='', title='', price='', qty='', total=''] = fields;
         return {
-          date: decodeURIComponent(date || ''),
-          title: decodeURIComponent(title || ''),
+          date: decodeURIComponent(date||''),
+          title: decodeURIComponent(title||''),
           price: clean(price),
-          qty: parseFloat(qty || 0) || 0,
+          qty: parseFloat(qty||0) || 0,
           total: clean(total)
         };
       });
@@ -315,8 +309,9 @@
     tbody.appendChild(tr);
   });
 
-  // Totals + hours
-  setText('total_hours', get('total_hours',''));
+  // Totals
+  const totalHoursStr = get('total_hours','');
+  setText('total_hours', totalHoursStr ? totalHoursStr : '');
 
   let subtotal = clean(get('subtotal',''));
   if (!subtotal && subtotalFromItems) subtotal = subtotalFromItems;
@@ -338,16 +333,22 @@
   setText('grand_total', money(grand));
 
   // Signature
+  const sig = get('signature','').trim();
   const signerText = [get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
   if (signerText) document.getElementById('signer').textContent = signerText;
-  else document.getElementById('sign_block').style.display = 'none';
+  if (!sig && !signerText) document.getElementById('sign_block').style.display = 'none';
+
+  // “Thank you” toggle (optional)
+  if (!/^(1|true)$/i.test(get('include_thanks','1'))) {
+    document.getElementById('thanks').style.display = 'none';
+  }
 
   // Terms (optional)
   const terms = get('terms','').trim();
   if(terms) document.getElementById('terms').textContent = terms;
   else document.getElementById('terms').style.display = 'none';
 
-  // Auto-print (prints; user’s dialog controls destination)
+  // Auto-print
   const autoPrint = /^(1|true)$/i.test(get('print','').trim());
   if (autoPrint) {
     window.addEventListener('load', () => { try { setTimeout(() => window.print(), 0); } catch {} });
