--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta http-equiv="Expires" content="0" />
 <style>
   :root{
-    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb;
-    --accent:#222; --soft:#cfd3d7;
+    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f;
+    --rule:#d1d5db;
   }
   *{ box-sizing:border-box }
   html,body{ height:100% }
@@ -19,11 +19,16 @@
     font:14px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     -webkit-print-color-adjust:exact; print-color-adjust:exact;
   }
-  /* Paper */
+  /* A4 sizing to avoid 2 pages */
   .sheet{
-    width:900px; max-width:95vw; margin:22px auto; background:var(--paper);
-    border:1px solid var(--line); border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.05);
-    padding:28px 32px 26px;
+    width: 178mm;               /* inner width that fits A4 with margins */
+    max-width: 95vw;
+    margin: 14mm auto;          /* visually similar to print margins */
+    background:var(--paper);
+    border:1px solid var(--line);
+    border-radius:12px;
+    box-shadow:0 10px 30px rgba(0,0,0,.05);
+    padding:22px 26px 18px;
   }
 
   /* Header */
@@ -33,32 +38,38 @@
   .logo img{ max-width:100%; max-height:100%; object-fit:contain }
   .t1{ font-size:20px; font-weight:800; letter-spacing:.02em }
   .t2{ font-size:12px; color:var(--muted); margin-top:2px }
-  .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:#2b2f35 }
+  .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:var(--accent) }
 
-  /* “Bar” that prints correctly */
-  .rule{ height:6px; background:var(--soft); border-radius:4px; position:relative; margin:10px 0 6px }
-  .rule::before{ content:""; position:absolute; inset:0 auto 0 0; width:120px; background:var(--accent); border-radius:4px }
+  /* Thin accent rule (same everywhere) */
+  .rule{ height:3px; border-radius:3px; background:
+      linear-gradient(90deg, var(--accent) 0 160px, var(--rule) 160px 100%); }
+  .rule.sm{ height:3px; } /* same thickness, semantic class for reuse */
 
-  /* Top meta */
-  .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:8px }
+  /* Meta */
+  .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:16px }
   .box{ border:1px solid var(--line); border-radius:10px; padding:14px 16px; background:#fff }
   .box h4{ margin:0 0 8px; font-size:13px; text-transform:uppercase; letter-spacing:.06em; color:#4b5563 }
   .mtitle{ font-weight:800; font-size:18px; margin:0 0 6px }
   .kv{ display:grid; grid-template-columns:140px 1fr; gap:6px 12px; font-size:13px }
   .label{ color:var(--muted) }
 
-  /* right meta is borderless */
+  /* right meta is borderless; no website shown on the right */
   .meta-plain{ border:none; background:transparent; padding:0; text-align:right; }
   .meta-plain .kv{ grid-template-columns:1fr 140px; margin-top:4px }
   .desc{ margin-top:8px; font-size:13px; color:#374151 }
 
-  /* Items */
-  h3.section{ margin:18px 0 10px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
+  /* Section title + thin rule below it */
+  h3.section{ margin:18px 0 6px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
+
+  /* Items table */
   table{ width:100%; border-collapse:collapse; }
   thead th{
     text-transform:uppercase; letter-spacing:.05em; font-size:11px; color:#4b5563;
-    border-bottom:2px solid var(--accent); padding:8px 10px; background:#f3f4f6; text-align:center;
+    padding:10px 10px; background:#f3f4f6; text-align:center; border-bottom:none;
   }
+  /* thin rule under header row (instead of thick border) */
+  .thead-rule{ height:3px; background:
+      linear-gradient(90deg, var(--accent) 0 160px, var(--rule) 160px 100%); }
   tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center }
   tbody td.desc-cell{ text-align:left }
   tbody tr:nth-child(2n){ background:#fafafa }
@@ -74,30 +85,19 @@
   .sum .row .label{ color:#6b7280 }
   .grand{ margin-top:8px; background:#111827; color:#fff; padding:12px 14px; border-radius:10px; font-weight:900; display:flex; justify-content:space-between }
 
-  /* Thanks & signature */
   .thanks{ margin-top:16px; font-weight:700 }
-  .terms{ margin-top:6px; font-size:13px; color:#4b5563 }
-  .sigwrap{ display:flex; justify-content:flex-end; gap:28px; align-items:flex-end; margin-top:24px }
-  .sigline{ width:240px; border-bottom:1px solid #d1d5db; height:50px }
-  .sigmeta{ text-align:right; font-size:12px; color:#4b5563 }
-
-  /* Footer contacts */
-  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; color:#374151 }
+  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:12px; padding-top:12px; border-top:1px solid #e5e7eb; color:#374151 }
   .footer div{ display:flex; align-items:center; gap:10px; }
   .icon{ width:28px; height:28px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
   .icon svg{ width:16px; height:16px; stroke:#6b7280; fill:none; stroke-width:2; }
-  .footer small{ font-size:12px } /* smaller so address doesn’t wrap */
-
-  /* Bottom rule */
-  .rule-bottom{ margin-top:12px }
 
   /* Print */
   @page { size:A4; margin:10mm }
-  thead{ display:table-header-group }
-  tfoot{ display:table-footer-group }
+  thead { display: table-header-group; }
+  tfoot { display: table-footer-group; }
   @media print{
     body{ background:#fff }
-    .sheet{ box-shadow:none; border:none; width:190mm; padding:0 6mm 6mm; margin:0 auto; }
+    .sheet{ box-shadow:none; border:none; margin:0 auto; width:178mm; padding:10mm 5mm 6mm; }
   }
 </style>
 </head>
@@ -108,12 +108,13 @@
         <div class="logo" id="from_logo_box"></div>
         <div>
           <div class="t1" id="brand_name">Company</div>
-          <div class="t2" id="brand_web"></div>
+          <div class="t2" id="brand_site"></div>
         </div>
       </div>
       <div class="right"><div class="inv-title" id="inv_title">INVOICE</div></div>
     </header>
 
+    <!-- THIN top rule -->
     <div class="rule"></div>
 
     <section class="meta">
@@ -132,7 +133,7 @@
         </div>
       </div>
 
-      <!-- INVOICE META (borderless) -->
+      <!-- INVOICE META (borderless; NO website on the right) -->
       <div class="box meta-plain">
         <div class="kv">
           <div class="label">Invoice no :</div><div id="invoice_number"></div>
@@ -144,16 +145,20 @@
     </section>
 
     <h3 class="section">Items</h3>
+    <!-- thin rule under the Items header (same as top) -->
+    <div class="rule sm" style="margin-bottom:6px;"></div>
+
     <table>
       <thead>
         <tr>
           <th style="width:140px">Date of Work</th>
           <th>Description</th>
-          <th style="width:120px">Price / Hourly Rate</th>
-          <th style="width:90px">Cost Qty</th>
+          <th style="width:130px">Price / Hourly Rate</th>
+          <th style="width:80px">Cost Qty</th>
           <th style="width:140px">Cost Total</th>
         </tr>
       </thead>
+      <!-- rule that visually underlines the header row (thin) -->
       <tbody id="items_body"></tbody>
     </table>
 
@@ -174,39 +179,29 @@
       </div>
     </section>
 
-    <div class="thanks" id="thanks">Thank you for your business!</div>
-    <div class="terms" id="terms"></div>
-
-    <div class="sigwrap" id="sign_block">
-      <div class="sigline"></div>
-      <div class="sigmeta">
-        <div style="font-weight:700; margin-top:8px" id="signer"></div>
-      </div>
-    </div>
-
-    <div class="rule rule-bottom"></div>
+    <div class="thanks">Thank you for your business!</div>
 
     <footer class="footer">
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M2 3h4l2 5-3 2a16 16 0 0 0 7 7l2-3 5 2v4a2 2 0 0 1-2 2c-9.94 0-18-8.06-18-18a2 2 0 0 1 2-2z"/></svg>
-        </span> <small id="from_phone_footer"></small>
+        </span> <span id="from_phone_footer"></span>
       </div>
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/><path d="M2 18h20"/></svg>
-        </span> <small id="from_email_footer"></small>
+        </span> <span id="from_email_footer"></span>
       </div>
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M12 21s7-4.35 7-10a7 7 0 0 0-14 0c0 5.65 7 10 7 10z"/><circle cx="12" cy="11" r="3"/></svg>
-        </span> <small id="from_address_footer"></small>
+        </span> <span id="from_address_footer"></span>
       </div>
     </footer>
   </div>
 
 <script>
-  // ---- helpers
+  // --- helpers
   const qp = new URLSearchParams(location.search);
   const get = (k, d='') => qp.get(k) ?? d;
   const ccy = get('ccy','AUD');
@@ -219,22 +214,21 @@
   const money = n => Number(n||0).toLocaleString(undefined,{style:'currency',currency:ccy});
   const esc = s => String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
 
-  function setText(id, value){
+  const setText = (id, value) => {
     const el = document.getElementById(id);
     if(!el) return;
     if(value && String(value).trim()!==''){ el.textContent = value; el.style.display=''; }
     else { el.textContent = ''; el.style.display='none'; }
-  }
+  };
 
-  // Header brand (no right website)
-  setText('brand_name', get('from_name','Invoice'));
-  setText('brand_web', get('from_web',''));
-
-  // Logo
+  // Brand + logo
+  const brand = get('from_name','');
+  setText('brand_name', brand || 'Invoice');
+  setText('brand_site', get('from_web',''));
   const logo = get('from_logo','').trim();
   if (logo) document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`;
 
-  // Title + invoice number (title is always INVOICE)
+  // Title + invoice number
   document.getElementById('inv_title').textContent = 'INVOICE';
   setText('invoice_number', get('invoice_number',''));
 
@@ -251,30 +245,28 @@
     setText('invoice_date', out);
   })();
 
-  // Client fields
+  // Client
   setText('client_name', get('client_name',''));
   setText('client_phone', get('client_phone',''));
   setText('client_email', get('client_email',''));
   setText('client_website', get('client_website',''));
   setText('client_business_number', get('client_business_number',''));
   setText('client_address', get('client_address',''));
-
-  // Description
   setText('invoice_description', get('invoice_description',''));
 
-  // Payment / bank (+ company ABN)
+  // Company/Bank
   setText('from_business_no', get('from_business_no',''));
   setText('bank_name', get('bank_name',''));
   setText('bank_acc_name', get('bank_acc_name',''));
   setText('bank_acc_no', get('bank_acc_no',''));
   setText('bank_routing', get('bank_routing',''));
 
-  // Footer contact from company
+  // Footer contact
   setText('from_phone_footer', get('from_phone',''));
   setText('from_email_footer', get('from_email',''));
   setText('from_address_footer', get('from_address',''));
 
-  // Items parser — format:  "date::title::price::qty::total" joined by "||"
+  // Items parser — "date::desc::price::qty::total" joined by "||"
   function parseItems(str){
     if(!str) return [];
     const rowSep = /(\|\||%7C%7C)/i;
@@ -282,10 +274,10 @@
     return str.split(rowSep).filter(s => !rowSep.test(s) && s!=='')
       .map(row => {
         const fields = row.split(colSep).filter(s => !colSep.test(s));
-        const [date='', title='', price='', qty='', total=''] = fields;
+        const [date='', desc='', price='', qty='', total=''] = fields;
         return {
           date: decodeURIComponent(date||''),
-          title: decodeURIComponent(title||''),
+          desc: decodeURIComponent(desc||''),
           price: clean(price),
           qty: parseFloat(qty||0) || 0,
           total: clean(total)
@@ -302,17 +294,14 @@
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${esc(it.date)}</td>
-      <td class="desc-cell">${esc(it.title)}</td>
+      <td class="desc-cell">${esc(it.desc)}</td>
       <td class="num">${money(it.price)}</td>
       <td>${(it.qty ?? 0).toLocaleString()}</td>
       <td class="num">${money(it.total)}</td>`;
     tbody.appendChild(tr);
   });
 
-  // Totals
-  const totalHoursStr = get('total_hours','');
-  setText('total_hours', totalHoursStr ? totalHoursStr : '');
-
+  // Totals / hours
   let subtotal = clean(get('subtotal',''));
   if (!subtotal && subtotalFromItems) subtotal = subtotalFromItems;
 
@@ -326,29 +315,16 @@
   let grand = clean(get('grand_total',''));
   if (!grand) grand = subtotal + taxes;
 
-  setText('subtotal', money(subtotal));
-  setText('taxes', money(taxes));
+  const hours = get('total_hours','');
+  setText('total_hours', hours ? hours : '');
+
+  document.getElementById('subtotal').textContent = money(subtotal);
+  document.getElementById('taxes').textContent = money(taxes);
   document.getElementById('tax_rate_label').textContent =
     (taxRate || taxRate===0) ? `(${(taxRate*100).toFixed(0)}%)` : '';
-  setText('grand_total', money(grand));
+  document.getElementById('grand_total').textContent = money(grand);
 
-  // Signature
-  const sig = get('signature','').trim();
-  const signerText = [get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
-  if (signerText) document.getElementById('signer').textContent = signerText;
-  if (!sig && !signerText) document.getElementById('sign_block').style.display = 'none';
-
-  // “Thank you” toggle (optional)
-  if (!/^(1|true)$/i.test(get('include_thanks','1'))) {
-    document.getElementById('thanks').style.display = 'none';
-  }
-
-  // Terms (optional)
-  const terms = get('terms','').trim();
-  if(terms) document.getElementById('terms').textContent = terms;
-  else document.getElementById('terms').style.display = 'none';
-
-  // Auto-print
+  // Auto-print (browser controls the default destination)
   const autoPrint = /^(1|true)$/i.test(get('print','').trim());
   if (autoPrint) {
     window.addEventListener('load', () => { try { setTimeout(() => window.print(), 0); } catch {} });
